force-app/main/default/objects/Service_Contract__c/fields/External_Contact__c.field-meta.xml
<CustomField>
    <fullName>External_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Service_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>