force-app/main/default/objects/Service_Contract__c/fields/Internal_Contact__c.field-meta.xml
<CustomField>
    <fullName>Internal_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Internal_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>