force-app/main/default/objects/Service_Contract__c/fields/Package_Price__c.field-meta.xml
<CustomField>
    <fullName>Package_Price__c</fullName>
    <formula>IF(ISPICKVAL(Package_Type__c, &quot;Basic&quot;), 1000,
IF(ISPICKVAL(Package_Type__c, &quot;Advanced&quot;), 1500,
IF(ISPICKVAL(Package_Type__c, &quot;Premium&quot;), 2000, 0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>