force-app/main/default/objects/Service_Contract__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Manager Approval Pending</fullName>
            </value>
            <value>
                <fullName>Approved by Manager</fullName>
            </value>
            <value>
                <fullName>Head Of Sales Approval Pending</fullName>
            </value>
            <value>
                <fullName>Approved by Head of Sales</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>