force-app/main/default/objects/Service_Contract__c/listViews/Head_of_Sales_Service_Contract.listView-meta.xml
<ListView>
    <fullName>Head_of_Sales_Service_Contract</fullName>
    <filterScope>Queue</filterScope>
    <label>Head of Sales</label>
    <queue>Head_of_Sales</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>